--- a/ubi.css
+++ b/ubi.css
@@ -1,6 +1,6 @@
 @font-face{
     font-family:UbisoftSans;
-    src: url('UbisoftSans-Bold.woff2'),url('UbisoftSans-Regular.woff2');
+    src: url('UbisoftSans-Regular.woff2'),url('UbisoftSans-Bold.woff2');
 }
 body{
     font-family: UbisoftSans,Helvetica Neue,Helvetica,Arial,sans-serif;
@@ -42,6 +42,7 @@ a{
 .pc_nav ul li{
     display:inline-block;
     font-weight: 700;
+    -webkit-font-smoothing: antialiased;
     text-transform: uppercase;
     font-size:16px;
     margin:15px 24px 15px;
@@ -77,14 +78,57 @@ a{
 .join_title{
     text-align:center;
 }
-.join_us h2,.join_us h4{
+.join_us>h2,.join_us>h4{
     text-align:center;
+    -webkit-font-smoothing: antialiased;
 }
 .join_sub{
     margin-top:-12px;
     font-size:17px;
     color:#5a5a5a;
+    margin-bottom:75px;
+    -webkit-font-smoothing: antialiased;
 }
 .join_title{
     font-size:40px;
+    text-transform: uppercase;
+    -webkit-font-smoothing: antialiased;
+}
+.join_card{
+    box-shadow: 0 0 50px rgba(0,0,0,0.2);
+    min-height: 445px;
+    max-width: 435px;
+    min-width: 230px;
+    position:relative;
+}
+.join_card_container{
+    display:inline-block;
+    padding:25px;
+    width:416px;
+}
+.join_card_img{
+    height:100%;
+    width:100%;
+    margin-top:-12px;
+}
+.join_card_img_container{
+    position:relative;
+    height:25%;
+}
+.join_introduction{
+    position:absolute;
+    display:inline-block;
+    text-align:left;
+    left: 8%;
+    right:8%;
+}
+.join_introduction>h4{
+    font-size:18px;
+    -webkit-font-smoothing: antialiased;
+}
+.join_introduction>h5{
+    font-size:16px;
+    color:#5a5a5a;
+    font-weight:400;
+    -webkit-font-smoothing: antialiased;
 }
