--- a/ubi.css
+++ b/ubi.css
@@ -82,6 +82,7 @@ a{
     height:18px;
 }
 .join_us{
+    padding-top:32px;
     background:white;
 }
 .join_title{
@@ -220,12 +221,9 @@ a{
     background: black;
 }
 .channels_text{
-    height:100%;
     font-size:14px;
     position:absolute;
-    top:23px;
-    margin:0;
-    margin-left:8%;
+    margin:23px 0 0 8%;
 }
 .channels_btn{
     transition-duration:0.6s;
@@ -252,4 +250,56 @@ a{
     text-align:center;
     color:#888787;
     font-size:12.5px;
+}
+.links>div{
+    display:inline-block;
+    margin-top:0;
+}
+.links_middle div a{
+    display:block;
+    margin-bottom:6px;
+}
+.links_left{
+    width:20%;
+}
+.links_middle{
+    width:60%;
+}
+.links_right{
+    width:10%;
+}
+.links_middle>div{
+    width:30%;
+    display:inline-block;
+}
+.links{
+    margin:0 8% 0 8%;
+    display:block;
+}
+.links_logo{
+    height:32px;
+    margin-bottom: 12px;
+}
+.links_left a{
+    color:#888787;
+    transition-duration: 0.6s;
+    text-transform:uppercase;
+    font-size:11px;
+}
+.links_left a:hover{
+    color:white;
+}
+.links_middle a{
+    color:white;
+    transition-duration: 0.6s;
+}
+.links_middle a:hover{
+    filter:opacity(0.65);
+    text-transform:uppercase;
+}
+.language{
+    color:white;
+}
+.language img{
+    width:20px;
 }
