--- a/ubi.css
+++ b/ubi.css
@@ -309,8 +309,8 @@ a{
 .inside_before,.inside_after{
     background:#a800ff;
     color:white;
-    width:60%;
-    height:120px;
+    width:55%;
+    height:100px;
     margin:0 auto 0 auto;
 }
 .inside_before>p{
@@ -319,6 +319,31 @@ a{
     text-transform: uppercase;
     text-align:center;
     margin-top:0;
-    padding-top: 40px;
+    padding-top: 30px;
     letter-spacing: 3px;
+}
+.inside_item_img{
+    width:100%;
+    height:100%;
+    position:absolute;
+    display:block;
+}
+.inside_item{
+    overflow:hidden;
+    width:40%;
+    min-height: 400px;
+    max-height: 700px;
+    min-width: 350px;
+    max-width: 700px;
+    height: auto;
+    position:absolute;
+}
+.inside_item_active{
+    transition-duration:0.6s;
+}
+.inside_item_active:hover{
+    transform:scale(1.15,1.15);
+}
+.inside_container>div{
+    display: inline-block;
 }
