--- a/ubi.css
+++ b/ubi.css
@@ -220,10 +220,17 @@ a{
     top:14px;
     background: black;
 }
-.channels_text{
-    font-size:14px;
-    position:absolute;
-    margin:23px 0 0 8%;
+@media screen and (min-width:800px) {
+    .channels_text {
+        font-size: 14px;
+        position: absolute;
+        margin: 23px 0 0 8%;
+    }
+}
+@media screen and (max-width:800px){
+    .channels_text{
+        display:none;
+    }
 }
 .channels_btn{
     transition-duration:0.6s;
@@ -306,14 +313,38 @@ a{
 .inside{
     background:white;
 }
-.inside_before,.inside_after{
+.inside_before{
     background:#a800ff;
     color:white;
     width:55%;
     height:100px;
     margin:0 auto 0 auto;
 }
-.inside_before>p{
+.inside_after{
+    background:#a800ff;
+    color:white;
+    width:55%;
+    height:75px;
+    margin:0 auto 0 auto;
+}
+.trending_before{
+    background: #018aff;
+    color:white;
+    width:55%;
+    height:100px;
+    margin:0 auto 0 auto;
+}
+.trending_after{
+    background: #018aff;
+    color:white;
+    width:55%;
+    height:75px;
+    margin:0 auto 0 auto;
+}
+.trending{
+    background:white;
+}
+.inside_before>p,.trending_before>p{
     font-weight:700;
     font-size:40px;
     text-transform: uppercase;
@@ -322,11 +353,11 @@ a{
     padding-top: 30px;
     letter-spacing: 3px;
 }
+
 .inside_item_img{
-    width:100%;
-    height:100%;
-    position:absolute;
     display:block;
+    width:100%;
+
 }
 .inside_item{
     overflow:hidden;
@@ -336,14 +367,77 @@ a{
     min-width: 350px;
     max-width: 700px;
     height: auto;
-    position:absolute;
+    position:relative;
 }
-.inside_item_active{
+.inside_item_active img{
     transition-duration:0.6s;
-}
-.inside_item_active:hover{
-    transform:scale(1.15,1.15);
 }
 .inside_container>div{
     display: inline-block;
+    margin-left:-4px;
+    margin-bottom:-4px;
+}
+.inside_item_active .inside_img_container:after{
+    content:"";
+    display: block;
+    position: relative;
+    margin-top: -700px;
+    height: 700px;
+    background: linear-gradient(180deg,transparent 0,rgba(0,0,0,.6) 80%);
+    width: 100%;
+    opacity:0;
+    transition-duration:0.6s;
+}
+.inside_item_active:hover img{
+    transform:scale(1.08,1.08);
+}
+.inside_item_active:hover .inside_img_container:after{
+    opacity: 1;
+}
+.news{
+    background:white;
+}
+.news>h4{
+    font-weight:700;
+    font-size:40px;
+    text-transform: uppercase;
+    text-align:center;
+    margin:0 auto 0 auto;
+    padding-top: 30px;
+    letter-spacing: 3px;
+}
+.inside_item_description{
+    position:absolute;
+    bottom:25%;
+    z-index:2;
+}
+.inside_item_description>h4{
+    text-transform: uppercase;
+    color:white;
+    text-shadow: 0 7px 51px rgba(0,0,0,.8);
+    text-align:center;
+    font-weight: 700;
+    font-size:30px;
+    margin-bottom:12px;
+}
+.inside_item_description_text{
+    color:#e1e1e1;
+    text-align:center;
+    text-shadow: 0 7px 51px rgba(0,0,0,.8);
+}
+.inside_item_button{
+    margin-top:12px;
+    border-radius: 20px;
+    font-size:20px;
+    padding:6px 12px;
+    cursor:pointer;
+    color:white;
+    background-color:transparent;
+    font-weight:700;
+    border:1px white solid;
+    z-index:2;
+    display:inline-block;
+}
+.inside_item_button:hover{
+    color: #a800ff;
 }
