--- a/css/ubi.css
+++ b/css/ubi.css
@@ -1,6 +1,6 @@
 @font-face{
     font-family:UbisoftSans;
-    src: url('UbisoftSans-Regular.woff2'),url('UbisoftSans-Bold.woff2');
+    src: url('../font/UbisoftSans-Regular.woff2'),url('../font/UbisoftSans-Bold.woff2');
 }
 body{
     font-family: UbisoftSans,Helvetica Neue,Helvetica,Arial,sans-serif;
@@ -363,25 +363,22 @@ a{
     width:100%;
 }
 .inside_item{
-    width:40%;
-    min-height: 400px;
-    max-height: 700px;
-    min-width: 350px;
-    max-width: 700px;
-    height: auto;
-    position:relative;
-    overflow:hidden;
-}
-.inside_container>div{
     display: inline-block;
     margin-left:-4px;
     margin-bottom:-4px;
+    width:40%;
+
+    height: 500px;
+    position:absolute;
+    overflow:hidden;
 }
 .inside_container{
-    display:flex;
-    width:100%;
-    height:auto;
-    flex-wrap:nowrap;
+    display:block;
+    touch-action: pan-y;
+    height:500px;
+    overflow: hidden;
+    padding:0;
+    margin:0;
 }
 .inside_item_active img{
     transition-duration:0.6s;
@@ -453,4 +450,74 @@ a{
 }
 .inside_item_button:hover{
     color: #a800ff;
+}
+.roll_container{
+    overflow: hidden;
+}
+.roll_container_list{
+    list-style-type: none;
+    position: relative;
+    height:800px;
+    background:white;
+    width:6000px;
+    transition: opacity .9s cubic-bezier(.33,.63,.65,.99);
+    margin:0;
+    padding:0;
+}
+.roll_container_anim{
+    transition: opacity .4s cubic-bezier(.3,.8,.1,.95);
+}
+.roll{
+    position: relative;
+    width: 100vw;
+    float:left;
+}
+.roll>img{
+    width:100%;
+    height:100%;
+}
+.roll_content{
+    position:absolute;
+    width:100%;
+    top:12px;
+    text-align:center;
+}
+.roll_content>h4{
+    text-transform: uppercase;
+    text-shadow: 0 7px 51px rgba(0,0,0,.8);
+    text-align:center;
+    font-weight: 700;
+    margin-top:24px;
+    opacity:0;
+    transition: opacity 1.2s linear;
+}
+.roll_content_active>h4{
+    opacity: 1 !important;
+}
+.roll_nav{
+    list-style-type: none;
+    margin:0;
+    padding:0;
+    position: absolute;
+    width:100%;
+    text-align:center;
+    bottom: 196px;
+}
+.roll_nav_items{
+    cursor: pointer;
+    display: inline-block;
+    margin:auto 32px;
+}
+.roll_nav_items>img{
+    width:auto;
+    height:96px;
+    vertical-align: bottom;
+}
+.roll_nav_items_active>img{
+    width:auto;
+    height:144px !important;
+    vertical-align: bottom;
+}
+.roll_nav_items_active{
+    margin: auto 64px !important;
 }
