--- a/css/ubi.css
+++ b/css/ubi.css
@@ -605,6 +605,11 @@ a{
     color: #5a5a5a;
     font-size: 15px;
 }
+.news_container{
+    display:block;
+    width:100%;
+    text-align:center;
+}
 .news_nav_container_li_active{
     font-weight:700;
     color: black !important;
@@ -616,4 +621,47 @@ a{
     width:100%;
     margin-top:2px;
     display:block;
+}
+.news_item{
+    text-align:left;
+    cursor:pointer;
+    width:40%;
+    height: 180px;
+    display:inline-block;
+    margin:24px;
+}
+.news_item_right{
+    height: 100%;
+    width:60%;
+    overflow: hidden;
+    display:inline-block;
+}
+.news_item_left{
+    display:inline-block;
+    width:40%;
+    height:100%;
+}
+.news_item_img{
+    width:100%;
+    height:100%;
+    vertical-align: initial;
+}
+.news_item_right>h3{
+    font-weight:700;
+    font-size:19px;
+    font-family: UbisoftSans-Bold,UbisoftSans,Helvetica Neue,Helvetica,Arial,sans-serif;
+    text-transform:uppercase;
+    margin-top:0;
+    margin-left:8px;
+}
+.news_item_right>h4{
+    font-family: Georgia,Times,Times New Roman,serif;
+    font-style: italic;
+    color: #5a5a5a;
+    margin-left:8px;
+}
+.news_item_right>h5{
+    color: #5a5a5a;
+    font-family: UbisoftSans,Helvetica Neue,Helvetica,Arial,sans-serif;
+    margin-left:8px;
 }
