--- a/css/ubi.css
+++ b/css/ubi.css
@@ -14,7 +14,7 @@ a{
     text-decoration:none;
 }
 .pc_nav{
-    width:100vw;
+    width:100%;
     height:50px;
     display:block;
     position:relative;
@@ -105,9 +105,8 @@ a{
         display:none;
     }
     .pc_nav_logo_container{
-        float: top;
         position:absolute;
-        margin: 0 50vw 0 50vw;
+        margin: 0 60vw 0 40vw;
     }
     .pc_nav_logo{
         padding-top: 8px;
@@ -480,6 +479,7 @@ a{
     background:#a800ff;
     color:white;
     height:75px;
+    position:relative;
     margin:0 auto 0 auto;
 }
 .trending_before{
@@ -523,40 +523,58 @@ a{
     margin-top:0;
     padding-top: 30px;
 }
+.inside_container{
+    position:relative;
+    display:flex;
+    touch-action: pan-y;
+    height: 48.1vw;
+    width: 100%;
+    overflow: hidden;
+    padding:0;
+    margin:0;
+}
 .inside_item_img{
     display:block;
     width:100%;
 }
 .inside_item{
+    position:relative;
     display: inline-block;
     margin-left:-4px;
     margin-bottom:-4px;
-    width:40%;
-
-    height: 500px;
-    position:absolute;
+    width: 50vw;
+    height: 48.1vw;
     overflow:hidden;
-}
-.inside_container{
-    display:block;
-    touch-action: pan-y;
-    height:500px;
-    overflow: hidden;
-    padding:0;
-    margin:0;
 }
 .inside_item_active img{
     transition-duration:0.6s;
 }
 .inside_img_container{
     display:block;
+    width:50vw;
+}
+.inside_container>ul{
+    margin:0;
+    padding:0;
+    display:flex;
+    width:200vw;
+    left:-25vw;
+    position:absolute;
+    justify-content: center;
+    align-items: center;
+    list-style-type:none;
+}
+.inside_container>ul>li{
+    display:block;
+    margin:0;
+    padding:0;
 }
 .inside_item_active .inside_img_container:after{
     content:"";
     display: block;
     position: relative;
-    margin-top: -700px;
-    height: 700px;
+    margin-top: -500px;
+    height: 100%;
     background: linear-gradient(180deg,transparent 0,rgba(0,0,0,.6) 80%);
     width: 100%;
     opacity:0;
@@ -584,6 +602,7 @@ a{
     position:absolute;
     bottom:25%;
     z-index:2;
+    width: 100%;
 }
 .inside_item_description>h4{
     text-transform: uppercase;
@@ -595,6 +614,7 @@ a{
     margin-bottom:12px;
 }
 .inside_item_description_text{
+    display:block;
     color:#e1e1e1;
     text-align:center;
     text-shadow: 0 7px 51px rgba(0,0,0,.8);
@@ -822,6 +842,9 @@ a{
     }
 }
 @media screen and (max-width:1000px){
+    .inside_item_description_text_whole{
+        display:none;
+    }
     .news_container{
         display:block;
         width:90%;
@@ -895,7 +918,7 @@ a{
 .news_item_right>h5{
     color: #5a5a5a;
     font-family: UbisoftSans,Helvetica Neue,Helvetica,Arial,sans-serif;
-    margin:2px 0 2px 8px;
+    margin:12px 0 2px 8px;
     font-size: 14px;
 }
 .news_item_right>h5 a{
